--- a/docs/docs/genai/tracing/integrations/listing/llama_index.mdx
+++ b/docs/docs/genai/tracing/integrations/listing/llama_index.mdx
@@ -15,7 +15,7 @@ import TabItem from "@theme/TabItem";
 
 [LlamaIndex](https://www.llamaindex.ai/) is an open-source framework for building agentic generative AI applications that allow large language models to work with your data in any format.
 
-[MLflow Tracing](../) provides automatic tracing capability for LlamaIndex. You can enable tracing
+[MLflow Tracing](/genai/tracing) provides automatic tracing capability for LlamaIndex. You can enable tracing
 for LlamaIndex by calling the <APILink fn="mlflow.llama_index.autolog" /> function, and nested traces are automatically logged to the active MLflow Experiment upon invocation of LlamaIndex engines and workflows.
 
 ```python
@@ -26,7 +26,7 @@ mlflow.llama_index.autolog()
 
 :::tip
 
-MLflow LlamaIndex integration is not only about tracing. MLflow offers full tracking experience for LlamaIndex, including model tracking, index management, and evaluation. Please checkout the **[MLflow LlamaIndex Flavor](/llms/llama-index)** to learn more!
+MLflow LlamaIndex integration is not only about tracing. MLflow offers full tracking experience for LlamaIndex, including model tracking, index management, and evaluation. Please checkout the **[MLflow LlamaIndex Flavor](/genai/flavors/llama-index)** to learn more!
 
 :::
 
@@ -75,7 +75,6 @@ Automatic tracing for LlamaIndex workflow works off-the-shelf by calling the sam
 
 To learn more about MLflow's integration with LlamaIndex Workflow, continue to the following tutorials:
 
-* [Building a Tool-calling Agent with LlamaIndex Workflow and MLflow](/llms/llama-index/notebooks/llama_index_workflow_tutorial)
 * [Building Advanced RAG with MLflow and LlamaIndex Workflow](https://mlflow.org/blog/mlflow-llama-index-workflow)
 
 
